--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.7.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -24,6 +27,9 @@
     "@types/http-errors": "^1.8.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.19",
+    "@types/pg": "^8.6.4",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^7.32.0",
@@ -33,7 +39,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-standard": "^5.0.0",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.5.0",
+    "swagger-ui-express": "^4.3.0",
     "typescript": "^4.5.5"
   }
 }
