--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "uuidv4": "^6.2.12",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -25,8 +29,12 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.19",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.4",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
@@ -39,6 +47,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-standard": "^5.0.0",
     "nodemon": "^2.0.15",
+    "passport-local": "^1.0.0",
     "swagger-ui-express": "^4.3.0",
     "typescript": "^4.5.5"
   }
