--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "nanoid": "^3.3.1",
+    "nanoid-dictionary": "^4.3.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "sharp": "^0.30.2",
     "uuidv4": "^6.2.12",
     "yamljs": "^0.3.0"
   },
@@ -31,11 +35,14 @@
     "@types/http-errors": "^1.8.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
+    "@types/nanoid-dictionary": "^4.2.0",
     "@types/node": "^17.0.19",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.4",
+    "@types/sharp": "^0.29.5",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
