--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +27,7 @@
     "pg": "^8.7.3",
     "sharp": "^0.30.2",
     "uuidv4": "^6.2.12",
+    "validator": "^13.7.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@types/pg": "^8.6.4",
     "@types/sharp": "^0.29.5",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.7.1",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
