was made minor refactoring and made skills in api doc

--- a/app/api-doc/api-doc.yaml
+++ b/app/api-doc/api-doc.yaml
@@ -135,32 +135,6 @@ components:
           example:
             totalPages: 100
     
-    Deleted:
-      type: object
-      properties:
-        id:
-          type: string
-        message: 
-          type: string
-      required:
-        - id
-      example: 
-        id: 10
-        message: Object deleted successfully
-
-    2XX:
-      type: object
-      properties:
-        id: 
-          type: string
-        message: 
-          type: string
-      required:
-        - id
-      example:
-        id: 1
-        message: Successful created
-
     4XX:
       type: object
       properties:
@@ -189,20 +163,24 @@ components:
         ]
       }
     
-    5XX:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
-          readOnly: true
-      example:
-        message: Sorry internal server error
-    
   responses:
+    200AfterSuccessfulChangesEntity:
+      description: Successful creating
+      content:
+        application/json:
+          schema: 
+            type: object
+            properties:
+              id: 
+                type: string
+                example: 1
+              message: 
+                type: string
+                example: Successful
+            required:
+              - id
     4XX:
-      description: Client Error
+      description: Bad Request
       content:
         application/json:
           schema:
@@ -228,7 +206,15 @@ components:
       content: 
         application/json:
           schema:
-            $ref: '#/components/schemas/5XX'
+            type: object
+            required:
+              - message
+            properties:
+              message:
+                type: string
+                readOnly: true
+            example:
+              message: Sorry internal server error
     
     UnauthorizedError:
       description: User unauthorized
