--- a/app/api-doc/homepage.yaml
+++ b/app/api-doc/homepage.yaml
@@ -26,11 +26,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/HomePageResponse'
         400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: 'api-doc.yaml#/components/schemas/4XX'
+          $ref: 'api-doc.yaml#/components/responses/4XX'
         500:
           $ref: 'api-doc.yaml#/components/responses/5XX'
       
